--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^14.2.15",
     "@types/d3-geo": "^3.1.0",
     "@types/geojson": "^7946.0.15",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
     "date-fns": "^4.1.0",
