--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^14.2.15",
     "@types/d3-geo": "^3.1.0",
     "@types/geojson": "^7946.0.15",
+    "@types/swiper": "^5.4.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
@@ -26,7 +27,8 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-simple-maps": "^3.0.0"
+    "react-simple-maps": "^3.0.0",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
