--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-simple-maps": "^3.0.0",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
