--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "components/summit/assets/stars.jsx",
+    "components/summit/assets/summit-logo.jsx"
+  ],
   "exclude": ["node_modules"]
 }
